corrected overflow-x

--- a/CSS/galeria.css
+++ b/CSS/galeria.css
@@ -10,7 +10,7 @@
   flex-basis: 30%; /* como son 9 imagenes ocupando el 30% del flex quedan 3 imagenes por linea en ventana de computadora*/
   padding: 10px;
   position: relative;
-  overflow: hidden; /* sin esto las imagenes se desbordan y chocan entre si*/ 
+  overflow-x: hidden; /* sin esto las imagenes se desbordan y chocan entre si*/ 
   height: 430px;
 }
 
